--- a/index.html
+++ b/index.html
@@ -3,16 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <script src="jquery-3.5.1.min.js"></script>
+  <script src="script.js"></script>
   <title>Interior consultant - dev challenge</title>
 </head>
 
 <body>
   <header>
+    <div class="logo">
+      <a href="index.html">This interior</a>
+    </div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#collection">Collection</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <div id="nav-mobile">
+      <a class="menu-toggle" href="#menu">
+        <i class="material-icons">menu</i>
+      </a>
+    </div>
   </header>
   <main>
+    <div class="main-content">
+      <div class="text-content">
+        <h2>Modern interior</h2>
+        <p class="paragraph">A full-Service residential & commercial interior design and staging company offering preofessional organizing & eco-services.</p>
+        <a href="#read-more" class="link">
+          <p>Read more</p>
+          <i class="material-icons">trending_flat</i>
+        </a>
+      </div>
+      <div class="image-content">
+        <img class="image" src="assets/photo1.png" alt="">
+        <div class="image-content-informations">
+          <div class="creator">
+            <img class="image" src="assets/photo2.png" alt="">
+            <div class="creator-informations">
+              <p class="creator-name">Aliza Webber</p>
+              <p class="creator-job-title">Interior designer</p>
+            </div>
+          </div>
+          <div class="creator-description">
+            <p class="description">Designed in 2020 by Aliza Webber</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
+    <p>Alexandre Pouivet @DevChallenges.io</p>
   </footer>
+  <div id="menu-mobile">
+    <div class="menu-close">
+      <a class="menu-toggle" href="#">
+        <i class="material-icons">close</i>
+      </a>
+    </div>
+    <div class="menu">
+      <div class="menu-links">
+        <a href="#home">Home</a>
+        <a href="#collection">Collection</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
